src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Internal Support Process</fullName>
        <description>for MS users who need help with SFDC</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Reviewing</fullName>
        </values>
        <values>
            <fullName>With Accounting</fullName>
        </values>
        <values>
            <fullName>With Customer Support</fullName>
        </values>
        <values>
            <fullName>With Premier Support</fullName>
        </values>
        <values>
            <fullName>With Research</fullName>
        </values>
        <values>
            <fullName>With Technology</fullName>
        </values>
        <values>
            <fullName>With Vendor</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Issue Management Support Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Pending BRM</fullName>
        </values>
        <values>
            <fullName>Pending Bug Fix</fullName>
        </values>
        <values>
            <fullName>Preliminary Review</fullName>
        </values>
        <values>
            <fullName>Reviewing</fullName>
        </values>
        <values>
            <fullName>With Accounting</fullName>
        </values>
        <values>
            <fullName>With Customer Support</fullName>
        </values>
        <values>
            <fullName>With Research</fullName>
        </values>
        <values>
            <fullName>With Technology</fullName>
        </values>
        <values>
            <fullName>With Vendor</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>MG Research Case</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Reviewing</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>MS Custom Services</fullName>
        <description>Metrostudy Custom Services Requests</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Preliminary Review</fullName>
        </values>
        <values>
            <fullName>Reviewing</fullName>
        </values>
        <values>
            <fullName>With Technology</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Media Group</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Reviewing</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Metrostudy Contracts</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Reviewing</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Research Dept</fullName>
        <description>Research Dept for Deanna</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Reviewing</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>SFDC Issues and Requests Tickets</fullName>
        <description>SFDC Issues and Requests</description>
        <isActive>true</isActive>
        <values>
            <fullName>30%2F60%2F90 Project</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Preliminary Review</fullName>
        </values>
        <values>
            <fullName>Reviewing</fullName>
        </values>
        <values>
            <fullName>With Premier Support</fullName>
        </values>
        <values>
            <fullName>With Vendor</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Site__c</fullName>
        <formula>nd_Account_Name__r.Site__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <label>Annual Revenue</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Under $500,000</fullName>
                </value>
                <value>
                    <fullName>$500,000 To $999,999</fullName>
                </value>
                <value>
                    <fullName>$1 Million To $4.9 Million</fullName>
                </value>
                <value>
                    <fullName>$5 Million To $10 Million</fullName>
                </value>
                <value>
                    <fullName>More than $10 Million</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_To_Role__c</fullName>
        <label>Assigned To Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sys Admin</fullName>
                </value>
                <value>
                    <fullName>Super User</fullName>
                </value>
                <value>
                    <fullName>Sales Operations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <description>Assigned To:</description>
        <inlineHelpText>Assign responsible party</inlineHelpText>
        <label>Assigned To:</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scott Artis</fullName>
                </value>
                <value>
                    <fullName>Mike Piehota</fullName>
                </value>
                <value>
                    <fullName>Alex Taylor</fullName>
                </value>
                <value>
                    <fullName>Dave Timmerman</fullName>
                </value>
                <value>
                    <fullName>Lori Luedke</fullName>
                </value>
                <value>
                    <fullName>Diana Stewart</fullName>
                </value>
                <value>
                    <fullName>Brian Savino</fullName>
                </value>
                <value>
                    <fullName>Wendi Miller</fullName>
                </value>
                <value>
                    <fullName>Deanna Hammond</fullName>
                </value>
                <value>
                    <fullName>Howard Lubinger</fullName>
                </value>
                <value>
                    <fullName>Kristin Maynard</fullName>
                </value>
                <value>
                    <fullName>Ali Barrionuevo</fullName>
                </value>
                <value>
                    <fullName>Kul Srivastva</fullName>
                </value>
                <value>
                    <fullName>Rudy Sanchez</fullName>
                </value>
                <value>
                    <fullName>Email Count Queue</fullName>
                </value>
                <value>
                    <fullName>John Murphy</fullName>
                </value>
                <value>
                    <fullName>Christopher Jackman</fullName>
                </value>
                <value>
                    <fullName>Ericca Ciochetti</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bill_to_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill to Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Schedule__c</fullName>
        <label>Billing Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One-Time</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Center__c</fullName>
        <description>Which Business Center(s) does the case impact?</description>
        <inlineHelpText>Which Business Center(s) does the case impact?</inlineHelpText>
        <label>Business Center</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Email Count Form</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Metrostudy</fullName>
                </value>
                <value>
                    <fullName>Meyers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <label>Business</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Architect</fullName>
                </value>
                <value>
                    <fullName>Builder</fullName>
                </value>
                <value>
                    <fullName>Building Products Dealer/Distributor</fullName>
                </value>
                <value>
                    <fullName>Carpentry</fullName>
                </value>
                <value>
                    <fullName>Commercial Business/Facilities</fullName>
                </value>
                <value>
                    <fullName>Commercial Developer/Building Owner</fullName>
                </value>
                <value>
                    <fullName>Concrete Contracting</fullName>
                </value>
                <value>
                    <fullName>Consumer/Homeowner</fullName>
                </value>
                <value>
                    <fullName>Deck And Dock Builders</fullName>
                </value>
                <value>
                    <fullName>Designer/Lighting Designer</fullName>
                </value>
                <value>
                    <fullName>Drywall Contracting</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Electrical Contracting</fullName>
                </value>
                <value>
                    <fullName>Electronics Installers/Integrators</fullName>
                </value>
                <value>
                    <fullName>Engineer</fullName>
                </value>
                <value>
                    <fullName>Facilities Management</fullName>
                </value>
                <value>
                    <fullName>Financial/Legal Accounting Services</fullName>
                </value>
                <value>
                    <fullName>General Contractor</fullName>
                </value>
                <value>
                    <fullName>Government/Public Agencies</fullName>
                </value>
                <value>
                    <fullName>HVAC/Plumbing Contracting</fullName>
                </value>
                <value>
                    <fullName>Hardware/Tools Dealer/Distributor</fullName>
                </value>
                <value>
                    <fullName>Hwy/Heavy Construction</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Landscape Design/Build/Architect</fullName>
                </value>
                <value>
                    <fullName>Masonry Contractor</fullName>
                </value>
                <value>
                    <fullName>Multi-Family Property Developer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Painting Contracting</fullName>
                </value>
                <value>
                    <fullName>Pool Builder</fullName>
                </value>
                <value>
                    <fullName>Pool Distributor/Wholesaler</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Owner_Alt_Email__c</fullName>
        <defaultValue>$User.Alternate_Email__c</defaultValue>
        <label>Case Owner Alt Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Comments__c</fullName>
        <label>Case Owner Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Reason_MS_Contracts__c</fullName>
        <defaultValue>&quot;New Agreement&quot;</defaultValue>
        <label>MS Contracts Case Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Agreement</fullName>
                </value>
                <value>
                    <fullName>Amendment</fullName>
                </value>
                <value>
                    <fullName>Cancellation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Reason__c</fullName>
        <label>Case Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Creative for Launch</fullName>
                </value>
                <value>
                    <fullName>Deployment info</fullName>
                </value>
                <value>
                    <fullName>Low OSI report</fullName>
                </value>
                <value>
                    <fullName>Need DFP reporting</fullName>
                </value>
                <value>
                    <fullName>Need inventory check</fullName>
                </value>
                <value>
                    <fullName>Need Line Optimization</fullName>
                </value>
                <value>
                    <fullName>Need list count</fullName>
                </value>
                <value>
                    <fullName>Need NL Reporting</fullName>
                </value>
                <value>
                    <fullName>Need RFP assistance</fullName>
                </value>
                <value>
                    <fullName>Updated Creative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cases_hour__c</fullName>
        <description>Shows HOUR in CreatedDate</description>
        <formula>IF(VALUE(MID(TEXT(CreatedDate),12,2))+7&lt;15,VALUE(MID(TEXT(CreatedDate),12,2))-8+24,VALUE(MID(TEXT(CreatedDate),12,2))-6)</formula>
        <label>Cases_hour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category_of_Issue__c</fullName>
        <label>Category of Issue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>FYI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <formula>Contact.MetroStudy_Client_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Category__c</fullName>
        <label>Closed Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Training - SFDC</fullName>
                </value>
                <value>
                    <fullName>Training - Zuora</fullName>
                </value>
                <value>
                    <fullName>Training - Other</fullName>
                </value>
                <value>
                    <fullName>Admin - SFDC</fullName>
                </value>
                <value>
                    <fullName>Admin  - Zuora</fullName>
                </value>
                <value>
                    <fullName>Admin - Echosign</fullName>
                </value>
                <value>
                    <fullName>Admin - Other</fullName>
                </value>
                <value>
                    <fullName>Ops - SFDC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comment_Added__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Comment Added</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <label>Created By:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Custom_Services_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Services Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Services_Notes__c</fullName>
        <label>Custom Services Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Key2__c</fullName>
        <description>The Housing Intelligence Pro Customer Key</description>
        <formula>Contact.Customer_Key__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>HIP Customer Key</inlineHelpText>
        <label>Customer Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSM_Line_s__c</fullName>
        <label>DSM Line(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Case Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Status,&quot;&quot;),&quot;Status, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL( Type ,&quot;&quot;), &quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Origin ,&quot;&quot;), &quot;Origin, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Reason ,&quot;&quot;), &quot;Reason, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Priority ,&quot;&quot;), &quot;Priority, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( Subject )&lt;5, &quot;Meaningful Subject Line&quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( OR(LEN(ContactId)=0,LEN( AccountId)=0), &quot;Associated Account and Contact&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( OR(LEN(ContactId)=0,LEN( AccountId)=0), 0,10) + IF( ISPICKVAL( Status ,&quot;&quot;), 0,15) + IF( ISPICKVAL( Type ,&quot;&quot;), 0,15) + IF( ISPICKVAL( Origin ,&quot;&quot;), 0,15) + IF( ISPICKVAL(   Reason ,&quot;&quot;), 0,15) + IF(ISPICKVAL(Priority, &quot;&quot;),0,15) + IF(LEN( Subject )&lt;5,0,15)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Vendor__c</fullName>
        <description>This is the data vendors who may be involved in resolving the case.</description>
        <inlineHelpText>This is the data vendors who may be involved in resolving the case.</inlineHelpText>
        <label>Data Vendor</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Census</fullName>
                </value>
                <value>
                    <fullName>CoreLogic</fullName>
                </value>
                <value>
                    <fullName>Great Schools</fullName>
                </value>
                <value>
                    <fullName>Location, Inc.</fullName>
                </value>
                <value>
                    <fullName>Maponics</fullName>
                </value>
                <value>
                    <fullName>Moody&apos;s</fullName>
                </value>
                <value>
                    <fullName>Nielsen/Claritas</fullName>
                </value>
                <value>
                    <fullName>Zillow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Detail__c</fullName>
        <label>Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Account Page</fullName>
                </value>
                <value>
                    <fullName>Add/Provision New Market(s)</fullName>
                </value>
                <value>
                    <fullName>Add/Provision New User(s)</fullName>
                </value>
                <value>
                    <fullName>Add Products</fullName>
                </value>
                <value>
                    <fullName>Analytics Data</fullName>
                </value>
                <value>
                    <fullName>Analytics Tab</fullName>
                </value>
                <value>
                    <fullName>BPM Product</fullName>
                </value>
                <value>
                    <fullName>Briefing Webinars</fullName>
                </value>
                <value>
                    <fullName>Browser Issue</fullName>
                </value>
                <value>
                    <fullName>Browser Issue - Insight</fullName>
                </value>
                <value>
                    <fullName>Cancellation</fullName>
                </value>
                <value>
                    <fullName>Card Panel</fullName>
                </value>
                <value>
                    <fullName>CE Change Req</fullName>
                </value>
                <value>
                    <fullName>CE Quote</fullName>
                </value>
                <value>
                    <fullName>CE Request</fullName>
                </value>
                <value>
                    <fullName>Change Password</fullName>
                </value>
                <value>
                    <fullName>Changes</fullName>
                </value>
                <value>
                    <fullName>Class Schedule</fullName>
                </value>
                <value>
                    <fullName>Contact Us - metrostudy.com</fullName>
                </value>
                <value>
                    <fullName>Contact Us - MS Central</fullName>
                </value>
                <value>
                    <fullName>Contract Expiration</fullName>
                </value>
                <value>
                    <fullName>Core/Property Search</fullName>
                </value>
                <value>
                    <fullName>Credentials</fullName>
                </value>
                <value>
                    <fullName>Criteria Pane</fullName>
                </value>
                <value>
                    <fullName>Custom Report</fullName>
                </value>
                <value>
                    <fullName>Custom Reports</fullName>
                </value>
                <value>
                    <fullName>Data</fullName>
                </value>
                <value>
                    <fullName>Data - HA</fullName>
                </value>
                <value>
                    <fullName>Data - Insight</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Count_Form_Name__c</fullName>
        <label>Email Count Form Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Geographic_Criteria__c</fullName>
        <label>Geographic Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HIP_to_MS_Migration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this is a legacy Market Intelligence account that has migrated or will migrate</description>
        <inlineHelpText>Indicates whether the account is a legacy Market Intelligence Account that needs to be migrated to Metrosearch.</inlineHelpText>
        <label>HIP to MS Migration Account?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Info_Incomplete_Inaccurate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Info Incomplete/Inaccurate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Term__c</fullName>
        <formula>Opportunity__r.FC_Initial_Term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Titles__c</fullName>
        <label>Job Titles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Architect, Designer, Engineer</fullName>
                </value>
                <value>
                    <fullName>Carpenter, Draftsman or Salesman</fullName>
                </value>
                <value>
                    <fullName>Construction Manager or Supervisor</fullName>
                </value>
                <value>
                    <fullName>Plumber</fullName>
                </value>
                <value>
                    <fullName>Electrician</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Sales and Marketing Manager</fullName>
                </value>
                <value>
                    <fullName>Other Management Personnel</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Owner, Partner, CEO, Director</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Land_Listing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Land Listing</label>
        <referenceTo>Land_Listing__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>License_Key__c</fullName>
        <label>License Key</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MS_Custom_Services_Required__c</fullName>
        <formula>IF (Opportunity__r.MS_Custom_Services_Required__c = True, &quot;Checked&quot;,&quot;Not Checked&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MS Custom Services Required</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Advisor__c</fullName>
        <formula>TEXT( Account.Member_Advisor__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Advisor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metrostudy_Lead__c</fullName>
        <formula>IF(INCLUDES(Opportunity__r.Metrostudy_Lead__c,&quot;NONE&quot;), &quot;NONE&quot;, NULL)  + BR() +
IF(INCLUDES(Opportunity__r.Metrostudy_Lead__c,&quot;Bo Harriss&quot;), &quot;Bo Harriss&quot;, NULL)  + BR() +
IF(INCLUDES(Opportunity__r.Metrostudy_Lead__c,&quot;Dante Amato&quot;), &quot;Dante Amato&quot;, NULL)  + BR() +
IF(INCLUDES(Opportunity__r.Metrostudy_Lead__c,&quot;Julie Supinski&quot;), &quot;Julie Supinski&quot;, NULL)  + BR() +
IF(INCLUDES(Opportunity__r.Metrostudy_Lead__c,&quot;Katie Welch&quot;), &quot;Katie Welch&quot;, NULL)  + BR() +
IF(INCLUDES(Opportunity__r.Metrostudy_Lead__c,&quot;Robb Coltrin&quot;), &quot;Robb Coltrin&quot;, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Metrostudy Lead</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_Date__c</fullName>
        <description>Date that the legacy HIP account was migrated to Metrosearch.</description>
        <inlineHelpText>Date that the legacy HIP account was migrated to Metrosearch.</inlineHelpText>
        <label>Migration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Account_Name__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Account Name</label>
        <type>Text</type>
    </fields>
</CustomObject>